--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ oauthlib==3.1.0
 pandocfilters==1.4.2
 parso==0.5.1
 pickleshare==0.7.5
+praw==6.4.0
+prawcore==1.0.1
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 Pygments==2.4.2
@@ -49,7 +51,9 @@ testpath==0.4.4
 tornado==6.0.3
 traitlets==4.3.3
 tweepy==3.8.0
+update-checker==0.16
 urllib3==1.25.7
 wcwidth==0.1.7
 webencodings==0.5.1
+websocket-client==0.56.0
 zipp==0.6.0
